--- a/.github/workflows/sourcepawn-js.yml
+++ b/.github/workflows/sourcepawn-js.yml
@@ -11,11 +11,7 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - run: git clone https://github.com/emscripten-core/emsdk.git
-      - run: cd emsdk && ls
-      - run: ./emsdk install latest
-      - run: ./emsdk activate latest
-      - run: source ./emsdk_env.sh && cd ..
-      - run: cd .. && git clone https://github.com/alliedmodders/sourcepawn.git
+      - uses: mymindstorm/setup-emsdk@v11
+      - run: git clone https://github.com/alliedmodders/sourcepawn.git
       - run: cd sourcepawn && git clone https://github.com/alliedmodders/ambuild.git
       - run: pip install ./ambuild
