--- a/.github/workflows/sourcepawn-js.yml
+++ b/.github/workflows/sourcepawn-js.yml
@@ -12,6 +12,21 @@ jobs:
       fail-fast: false
     steps:
       - uses: mymindstorm/setup-emsdk@v11
-      - run: git clone https://github.com/alliedmodders/sourcepawn.git
-      - run: cd sourcepawn && git clone https://github.com/alliedmodders/ambuild.git
-      - run: ls && pip install ./ambuild
+      - name: Clone Sourcepawn
+        run: git clone https://github.com/alliedmodders/sourcepawn.git
+      - name: Setup ambuild
+        working-dir: ./sourcepawn
+        run: |
+          git clone https://github.com/alliedmodders/ambuild.git
+          pip install ./ambuild
+          AM_CC=emcc
+          AM_CXX=em++
+          AM_ARCH=x86
+          AM_TYPE=optimize
+      - name: Build
+        working-dir: ./sourcepawn
+        run: |
+          mkdir objdir
+          cd objdir
+          CC=$AM_CC CXX=$AM_CXX python ../configure.py --enable-$AM_TYPE --targets=$AM_ARCH
+          ambuild
