--- a/.github/workflows/sourcepawn-js.yml
+++ b/.github/workflows/sourcepawn-js.yml
@@ -19,14 +19,13 @@ jobs:
         run: |
           git clone https://github.com/alliedmodders/ambuild.git
           pip install ./ambuild
-          AM_CC=emcc
-          AM_CXX=em++
-          AM_ARCH=x86
-          AM_TYPE=optimize
       - name: Build
         working-directory: ./sourcepawn
+        env:
+          CC: emcc
+          CXX: em++
         run: |
           mkdir objdir
           cd objdir
-          CC=$AM_CC CXX=$AM_CXX python ../configure.py --enable-$AM_TYPE --targets=$AM_ARCH
+          python ../configure.py --enable-optimize --targets=x86
           ambuild
